--- a/lab/client/index.html
+++ b/lab/client/index.html
@@ -62,7 +62,8 @@
         <li><a href="/">home</a></li>
         <li class="admin"><a href="/books/new">add book</a></li>
         <li class="admin"><a href="/books/search">search g-books</a></li>
-        <!-- COMMENT: This will allow users to log in as an admin using a passphrase, but there is no way to log out. How would you enhance this application to allow a user to log out? -->
+        <!-- COMMENT-DONE: This will allow users to log in as an admin using a passphrase, but there is no way to log out. How would you enhance this application to allow a user to log out? -->
+        <!-- Add a logout function that reverses everything done in the login function -->
         <li><a href="/admin">login</a></li>
       </ul>
     </nav>
